--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@ input[type="number"]::-webkit-inner-spin-button {
   flex-grow: 1; 
   overflow-y: auto; 
   padding:0 5px; 
-  border-radius: 5%;
+  /* border-radius: 5%; */
 }
 
 .sidebar-menu {
